typescript/checker/tests/conformance/es6/computedProperties/computedPropertyNames6_ES6.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            21,
        ),
        hi: BytePos(
            23,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNames6_ES6.ts:2:5
  |
2 | var p1: number | string;
  |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            47,
        ),
        hi: BytePos(
            49,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNames6_ES6.ts:3:5
  |
3 | var p2: number | number[];
  |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            75,
        ),
        hi: BytePos(
            77,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNames6_ES6.ts:4:5
  |
4 | var p3: string | boolean;
  |     ^^

